--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 license = "Apache-2.0"
 
 [dependencies]
+ethereum = { git = "https://github.com/rust-blockchain/ethereum", branch = "vorot93/dev", default-features = false, features = ["with-serde"] }
 primitive-types = { git = "https://github.com/paritytech/parity-common", default-features = false, features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 tarpc = "0.23"
