--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ license = "Apache-2.0"
 
 [dependencies]
 ethereum = { git = "https://github.com/rust-blockchain/ethereum", branch = "vorot93/dev", default-features = false, features = ["with-serde"] }
-ethereum-types = { git = "https://github.com/paritytech/parity-common" }
+ethereum-types = "0.10"
 serde = { version = "1", features = ["derive"] }
 tarpc = "0.24"
