--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "Apache-2.0"
 
 [dependencies]
-ethereum = { git = "https://github.com/rust-blockchain/ethereum", branch = "vorot93/dev", default-features = false, features = ["with-serde"] }
+ethereum = { git = "https://github.com/rust-blockchain/ethereum", default-features = false, features = ["with-serde"] }
 ethereum-types = "0.10"
 serde = { version = "1", features = ["derive"] }
 tarpc = "0.24"
