--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "Apache-2.0"
 
 [dependencies]
 ethereum = { git = "https://github.com/rust-blockchain/ethereum", default-features = false, features = ["with-serde"] }
-ethereum-types = "0.10"
+ethereum-types = "0.11"
+funty = "<1.2"
 serde = { version = "1", features = ["derive"] }
 tarpc = "0.24"
