--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2018"
 license = "Apache-2.0"
 
 [dependencies]
-ethereum = { git = "https://github.com/rust-blockchain/ethereum", default-features = false, features = ["with-serde"] }
+ethereum = { version = "0.7", default-features = false, features = ["with-serde"] }
 ethereum-types = "0.11"
-funty = "<1.2"
 serde = { version = "1", features = ["derive"] }
 tarpc = "0.24"
